Backported hero fix to ensure canvas sits behind text.

--- a/src/ui-lib/sass/05-components/03-organisms/_hero.scss
+++ b/src/ui-lib/sass/05-components/03-organisms/_hero.scss
@@ -27,4 +27,8 @@
     left: 0;
     margin: 0;
   }
+
+  > :not(canvas) {
+    position: relative;
+  }
 }
